--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 baseurl: "/"
 urls:
-  github:      "https://github.com/bnfc/bnfc"
+  github:      "https://github.com/BNFC/bnfc"
   openhub:     "https://www.openhub.net/p/bnfc"
   hackage:     "https://hackage.haskell.org/package/BNFC"
+  stackage:    "https://www.stackage.org/package/BNFC"
   readthedocs: "https://bnfc.readthedocs.org/"
   googlegroup: "https://groups.google.com/forum/#!forum/bnfc-dev"
   download:    "/download"
